src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Time_ITE_Processing__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( Minutes_ITE_Processing__c  / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(Minutes_ITE_Processing__c ,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(Minutes_ITE_Processing__c ,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time ITE Processing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_ITE_Received__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( Minutes_ITE_Received__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(Minutes_ITE_Received__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(Minutes_ITE_Received__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time ITE Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_MD_Review__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesMDReview__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesMDReview__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesMDReview__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time MD Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Peer_To_Peer_Review__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesPeerToPeerReview__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesPeerToPeerReview__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesPeerToPeerReview__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Peer To Peer Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Prior_Authorization_Received__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesPriorAuthorizationReceived__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesPriorAuthorizationReceived__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesPriorAuthorizationReceived__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Prior Authorization Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Requested_Missing_Information__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesRequestedMissingInformation__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesRequestedMissingInformation__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesRequestedMissingInformation__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Requested Missing Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Converts time spent in status from minutes into days, hours and minutes</description>
        <formula>TEXT(FLOOR( MinutesClinicalReview__c / 1440)) &amp;&apos;days&apos;&amp; &quot; &quot; &amp; TEXT( FLOOR( MOD(MinutesClinicalReview__c,1440 ) / 60)) &amp;&apos;hrs&apos;&amp; &quot; &quot; &amp;
TEXT(FLOOR(MOD( MOD(MinutesClinicalReview__c,1440),60)))&amp;&apos;mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Clinical Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Service_Lines__c</fullName>
        <description>Number of Service Lines on a Prior Auth</description>
        <label>Total Service Lines</label>
        <summaryForeignKey>Service_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <description>Defines whether or not WO is subject to onshore restriction

US2367747</description>
        <label>UHG Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a milestone is in violation</description>
        <label>Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xref_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Xref ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Member_Added_Work_Queue</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Member_ID__c</columns>
        <columns>Policy_ID__c</columns>
        <columns>Date_of_Birth__c</columns>
        <columns>Priority</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Add_Member__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Member Added Work Queue</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Notifications</fullName>
        <booleanFilter>(1 AND 7 AND 8 AND 9) AND ((2 AND 6) OR (3 AND 6) OR (4) OR (5))</booleanFilter>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Service_Reference__c</columns>
        <columns>Notification_Date__c</columns>
        <columns>Notification_Owner__c</columns>
        <columns>Addressed__c</columns>
        <columns>ITE_Status__c</columns>
        <columns>On_Hold__c</columns>
        <columns>Milestone_Violated__c</columns>
        <columns>Denied_Med_Nec__c</columns>
        <columns>Denied_Clinical_Evidence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Addressed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>On_Hold__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Milestone_Violated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Denied_Clinical_Evidence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Denied_Med_Nec__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ITE_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Suppress_Notifications__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ITE_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Special_Needs_Status__c</field>
            <operation>equals</operation>
            <value>Eligible</value>
        </filters>
        <label>Notifications - Eligible</label>
        <sharedTo>
            <roleAndSubordinatesInternal>FEC</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Research_Advisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Notifications_Engaged</fullName>
        <booleanFilter>(1 AND 7 AND 8 AND 9) AND ((2 AND 6) OR (3 AND 6) OR (4) OR (5))</booleanFilter>
        <columns>Name</columns>
        <columns>Account</columns>
        <columns>Service_Reference__c</columns>
        <columns>Notification_Date__c</columns>
        <columns>Notification_Owner__c</columns>
        <columns>Addressed__c</columns>
        <columns>ITE_Status__c</columns>
        <columns>On_Hold__c</columns>
        <columns>Milestone_Violated__c</columns>
        <columns>Denied_Med_Nec__c</columns>
        <columns>Denied_Clinical_Evidence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Addressed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>On_Hold__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Milestone_Violated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Denied_Clinical_Evidence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Denied_Med_Nec__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ITE_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Suppress_Notifications__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ITE_Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <filters>
            <field>Special_Needs_Status__c</field>
            <operation>equals</operation>
            <value>Engaged</value>
        </filters>
        <label>Notifications - Engaged</label>
        <sharedTo>
            <roleAndSubordinatesInternal>FEC</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Research_Advisor</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Prior_Authorization</fullName>
        <active>true</active>
        <description>Prior Authorizations for the Insurance Tracking Engine</description>
        <label>Prior Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prior_Authorization_Canceled</fullName>
        <active>true</active>
        <label>Prior Authorization Canceled</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prior_Authorization_On_Hold</fullName>
        <active>true</active>
        <description>Prior Auth record type to add On Hold status into Path</description>
        <label>Prior Authorization On Hold</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_updating_Host_System_Date_Time</fullName>
        <active>false</active>
        <description>Prevents the Host System Date and Time field from being updated once the work order is created.</description>
        <errorConditionFormula>ISCHANGED( Host_System_Date_and_Time__c )</errorConditionFormula>
        <errorDisplayField>Host_System_Date_and_Time__c</errorDisplayField>
        <errorMessage>Host System Date and Time cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UHG_Restriction</fullName>
        <active>true</active>
        <description>Validation rule to prevent changing the owner of a case with UHG restriction = Yes to someone who does not have access to UHG data.
US2367747</description>
        <errorConditionFormula>AND(
ISCHANGED(  OwnerId  ),
ISPICKVAL(Owner:User.UHG_Access__c , &quot;No&quot;),
ISPICKVAL( UHG_Restriction__c , &apos;Yes&apos;)
)</errorConditionFormula>
        <errorMessage>This is a UHG restricted group. You are not able to change owner to this user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Host_Date_Time_updated</fullName>
        <active>false</active>
        <description>When the Status Detail is updated also need to make sure the Host System Date/Time is updated.</description>
        <errorConditionFormula>AND( ISCHANGED( Status_Detail__c ) , NOT( ISCHANGED( Host_System_Date_and_Time__c ) ) )</errorConditionFormula>
        <errorDisplayField>Host_System_Date_and_Time__c</errorDisplayField>
        <errorMessage>When changing the Status Detail field you must also update the Host System Date and Time field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>verify_if_open_service_lines</fullName>
        <active>false</active>
        <description>Validation to make sure all service lines have a decision outcome and reason before completing a work order.</description>
        <errorConditionFormula>AND(  ISCHANGED( Status_Detail__c ) , ISPICKVAL(  Status_Detail__c  , &quot;Decision Has Been Made&quot;),(No_of_Completed_Service_Lines__c   &lt;  Total_Service_Lines__c))</errorConditionFormula>
        <errorMessage>All Service Lines must be completed before completing the Work Order.</errorMessage>
    </validationRules>
</CustomObject>